# cube-http-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  openspec.yml  pyproject.toml  pyrightconfig.json  tox.ini
docker/: docker-compose.yml  init.sql
docker/model/cubes/: accounts.yml  campaigns.yml  cases.yml  contacts.yml  leads.yml  opportunities.yml  opportunity_line_items.yml  price_books.yml  products.yml  tasks.yml  users.yml
docker/model/views/: test_view.yml
examples/: async_quickstart.py  context_manager_examples.py  custom_client_examples.py  custom_response_models.py  quickstart.py  test_load.py  test_meta.py  test_quickstart.py  test_sql.py
src/cube_http/: __init__.py  _client.py  clients.py  exc.py
src/cube_http/_utils/: build.py  serde.py
src/cube_http/exc/: __init__.py  _base.py
src/cube_http/exc/v1/: __init__.py  _base.py  load.py  meta.py  sql.py
src/cube_http/resources/: __init__.py  _base.py  v1.py
src/cube_http/resources/v1/: __init__.py  load.py  meta.py
src/cube_http/routes/: _base.py
src/cube_http/routes/v1/: __init__.py  load.py  meta.py  sql.py
src/cube_http/types/: _base.py  _client.py  _generics.py
src/cube_http/types/v1/: __init__.py  error.py  load.py  load_request.py  load_response.py  meta.py  meta_request.py  meta_response.py  operators.py  sql.py  sql_request.py  sql_response.py  time_granularities.py
tests/: conftest.py  fixtures.py  test_client_options.py  test_custom_response_models.py  test_exceptions.py  test_load.py  test_meta.py  test_pydantic_models.py  test_sql.py
