[tool.poetry]
name = "cube-http-client"
version = "0.1.0"
description = "Pythonic HTTP client for Cube.dev REST API"
authors = ["Michael Harris <mharris@definite.app>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "cube_http", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
httpx = "^0.27.0"
pydantic = ">=1,<3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.11.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
tox = "^4.16.0"
datamodel-code-generator = "^0.25.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 81

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"
exclude = [".venv"]
venvPath = "."
venv = ".venv"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportMissingTypeStubs = false
reportUnusedImport = "error"
reportPrivateUsage = "none"
reportWildcardImportFromLibrary = "none"
reportMissingModuleSource = "none"
