[tool.poetry]
name = "cube-http-client"
version = "0.3.7"
description = "Pythonic HTTP client for Cube.js REST API (sync + async)"
authors = ["Michael Harris <mharris@definite.app>"]
license = "MIT"
readme = "README.md"
keywords = ["cube.js", "cube js", "cube.dev", "cube"]
homepage = "https://github.com/mharrisb1/cube-http-client"
repository = "https://github.com/mharrisb1/cube-http-client"
documentation = "https://github.com/mharrisb1/cube-http-client"
packages = [{ include = "cube_http", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
httpx = "^0.27.0"
pydantic = ">=1,<3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.11.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
tox = "^4.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 81

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"
exclude = [".venv"]
venvPath = "."
venv = ".venv"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportMissingTypeStubs = false
reportUnusedImport = "error"
reportPrivateUsage = "none"
reportWildcardImportFromLibrary = "none"
reportMissingModuleSource = "none"
